# myshell

./: CMakeLists.txt  Doxyfile  README.md
cmake/: ExternalPrograms.cmake
inc/internal/: msh_builtin.h  msh_errno.h  msh_error.h  msh_exec.h  msh_internal.h  msh_jobs.h  msh_parser.h  msh_prompt.h  msh_redirects.h  msh_utils.h
inc/types/: msh_builin_command.h  msh_builtin_doc.h  msh_command.h  msh_command_fwd.h  msh_exception.h  msh_process.h  msh_redirect.h  msh_token.h  msh_variable.h
src/: main.cpp
src/builtin/: malias.cpp  mcd.cpp  mecho.cpp  merrno.cpp  mexit.cpp  mexport.cpp  mjobs.cpp  mpwd.cpp  msource.cpp  munalias.cpp
src/internal/: msh_builtin.cpp  msh_error.cpp  msh_exec.cpp  msh_history.h.in  msh_internal.cpp  msh_jobs.cpp  msh_parser.cpp  msh_prompt.cpp  msh_redirects.cpp  msh_utils.cpp
src/templates/: msh_external.h.in
